  preserved.
- Messages in prompts are now word-wrapped rather than displaying them in one
  long line.
- If a command stats with space (e.g. `: open ...`, it's now not saved to
  command history anymore (similar to how some shells work).
- When a tab is pinned, running `:open` will now open a new tab instead of
  displaying an error.

Fixed
~~~~~

- The `colors.webpage.preferred_color_scheme` and `colors.webpage.darkmode.*`
  settings now work correctly with the upcoming QtWebEngine 5.15.3 (and Gentoo,
  which at the time of writing packages 5.15.3 disguised as 5.15.2).
- When dark mode settings were set, existing `blink-features` arguments in
  `qt.args` (or `--qt-flag`) were overridden. They are now combined properly.
- On QtWebEngine 5.15.2, auto detection for the `prefers-color-scheme` media
  query is broken and always returns `no-preference`, which was removed from the
  CSS WG Specification. This release contains a workaround to always return
  `light` instead (as per the spec).
- When an external file selector deletes the temporary file (like `nnn` does
  when quitting the terminal), qutebrowser would crash. It now displays an
  error instead. The same applies if the temporary file is unreadable for any
  other reason.
- On macOS, a change in v2.0.x caused certain shortcuts to not work with Cmd
  anymore, using Ctrl instead. They now work correctly using Cmd (like usual on
  macOS) again.
- On macOS, using `F` (`hint all tab`) sometimes would open a context menu
  instead of following a link. This is now fixed.
- The quirk added for a missing `String.replaceAll` did not handle special
  regexp characters correctly, thus breaking some sites. It now handles them
  properly.
- The "try again" button on error pages now works correctly with JavaScript
  disabled.

[[v2.0.2]]
v2.0.2 (2021-02-04)
-------------------

Fixed
~~~~~

- When right-clicking an empty part of the downloads bar, qutebrowser v2.0.x
  would crash. This is now fixed.