@@ -207,8 +207,8 @@
 |<<editor.command,editor.command>>|Editor (and arguments) to use for the `edit-*` commands.
 |<<editor.encoding,editor.encoding>>|Encoding to use for the editor.
 |<<fileselect.handler,fileselect.handler>>|Handler for selecting file(s) in forms. If `external`, then the commands specified by `fileselect.single_file.command` and `fileselect.multiple_files.command` are used to select one or multiple files respectively.
-|<<fileselect.multiple_files.command,fileselect.multiple_files.command>>|Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file, separated by newlines.
-|<<fileselect.single_file.command,fileselect.single_file.command>>|Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file.
+|<<fileselect.multiple_files.command,fileselect.multiple_files.command>>|Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file or to stdout, separated by newlines.
+|<<fileselect.single_file.command,fileselect.single_file.command>>|Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file or stdout.
 |<<fonts.completion.category,fonts.completion.category>>|Font used in the completion categories.
 |<<fonts.completion.entry,fonts.completion.entry>>|Font used in the completion widget.
 |<<fonts.contextmenu,fonts.contextmenu>>|Font used for the context menu.
@@ -2825,9 +2825,10 @@ Default: +pass:[default]+
 
 [[fileselect.multiple_files.command]]
 === fileselect.multiple_files.command
-Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file, separated by newlines.
+Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file or to stdout, separated by newlines.
 The following placeholders are defined:
-* `{}`: Filename of the file to be written to.
+* `{}`: Filename of the file to be written to. If not contained in any argument, the
+  standard output of the command is read instead.
 
 Type: <<types,ShellCommand>>
 
@@ -2840,9 +2841,10 @@ Default:
 
 [[fileselect.single_file.command]]
 === fileselect.single_file.command
-Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file.
+Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file or stdout.
 The following placeholders are defined:
-* `{}`: Filename of the file to be written to.
+* `{}`: Filename of the file to be written to. If not contained in any argument, the
+  standard output of the command is read instead.
 
 Type: <<types,ShellCommand>>
 
