@@ -1267,11 +1267,12 @@ fileselect.single_file.command:
   default: ['xterm', '-e', 'ranger', '--choosefile={}']
   desc: >-
     Command (and arguments) to use for selecting a single file in forms.
-    The command should write the selected file path to the specified file.
+    The command should write the selected file path to the specified file or stdout.
 
     The following placeholders are defined:
 
-    * `{}`: Filename of the file to be written to.
+    * `{}`: Filename of the file to be written to. If not contained in any argument, the
+      standard output of the command is read instead.
 
 fileselect.multiple_files.command:
   type:
@@ -1284,12 +1285,13 @@ fileselect.multiple_files.command:
   default: ['xterm', '-e', 'ranger', '--choosefiles={}']
   desc: >-
     Command (and arguments) to use for selecting multiple files in forms.
-    The command should write the selected file paths to the specified file,
+    The command should write the selected file paths to the specified file or to stdout,
     separated by newlines.
 
     The following placeholders are defined:
 
-    * `{}`: Filename of the file to be written to.
+    * `{}`: Filename of the file to be written to. If not contained in any argument, the
+      standard output of the command is read instead.
 
 ## hints
 
